--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,20 @@ script:
         if [ -z "$TRAVIS_TAG" -a -z "$IS_RELEASE" ]; then
             if [ "$TRAVIS_PULL_REQUEST" = "false" -a "$TRAVIS_BRANCH" = "master" ]; then
                 $_MVN clean install;
+                export DEPLOY_SITE=1
             else
                 $_MVN clean verify;
             fi
         fi
 
+after_success:
+    - mkdir ~/.ssh
+    - openssl aes-256-cbc -K $encrypted_f29c5c677a17_key
+      -iv $encrypted_f29c5c677a17_iv -in .utils/repo-key.enc -out ~/.ssh/id_rsa -d
+    - chmod 600 ~/.ssh/id_rsa
+    - if [ -n "$DEPLOY_SITE" ]; then $_MVN site-deploy; fi
+
 env:
     global:
         - _MVN='mvn -B -V -e -s ../settings.xml'
-        - secure: "MFG0Vc4n/k24wsUqkm5WMBUWnrgAVW286QSUx3qK50Vcnyyim8spEHvdPnlHWejpwtwsj1SLF6w2SiZ+gEorikfoL/ioMuIh2KvvWwe40tSQOdN68qPn/NGsAt/+sxMObHT+HPt0NGEUqeYVg7xWDpeUs7PW3jnqkbBH/n/nEvk="
+
