--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
+sudo: false
 language: java
 jdk:
   - oraclejdk8
 
 before_install:
     - curl https://raw.githubusercontent.com/s4u/parent/travis/settings.xml -o ../settings.xml
+    - ls -la .utils/
+    - openssl aes-256-cbc -K $encrypted_f29c5c677a17_key -iv $encrypted_f29c5c677a17_iv -in .utils/repo-key.enc -out ~/.ssh/id_rsa -d
+    - chmod 600 ~/.ssh/id_rsa
+
 
 
 install: true
@@ -15,20 +20,21 @@ script:
         if [ -z "$TRAVIS_TAG" -a -z "$IS_RELEASE" ]; then
             if [ "$TRAVIS_PULL_REQUEST" = "false" -a "$TRAVIS_BRANCH" = "master" ]; then
                 $_MVN clean install;
-                export DEPLOY_SITE=1
+                export DEPLOY_SITE=1;
             else
                 $_MVN clean verify;
             fi
         fi
 
 after_success:
-    - mkdir ~/.ssh
-    - openssl aes-256-cbc -K $encrypted_f29c5c677a17_key
-      -iv $encrypted_f29c5c677a17_iv -in .utils/repo-key.enc -out ~/.ssh/id_rsa -d
-    - chmod 600 ~/.ssh/id_rsa
+    - ls -la ~/.ssh/
     - if [ -n "$DEPLOY_SITE" ]; then $_MVN site-deploy; fi
 
 env:
     global:
         - _MVN='mvn -B -V -e -s ../settings.xml'
+
+cache:
+  directories:
+  - $HOME/.m2
 
