--- a/pom.xml
+++ b/pom.xml
@@ -44,5 +44,14 @@
         </site>
     </distributionManagement>
 
+    <build>
+        <plugins>
+            <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-release-plugin</artifactId>
+                  <version>2.5.3</version>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
