--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,7 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -26,7 +25,7 @@
 
     <groupId>test</groupId>
     <artifactId>test</artifactId>
-    <version>1.4-SNAPSHOT</version>
+    <version>1.4</version>
 
     <description>test project</description>
     <url>http://slawekjaranowski.github.io/test</url>
@@ -35,7 +34,7 @@
         <connection>scm:git:git@github.com:slawekjaranowski/test.git</connection>
         <developerConnection>${project.scm.connection}</developerConnection>
         <url>https://github.com/slawekjaranowski/test</url>
-        <tag>HEAD</tag>
+        <tag>test-1.4</tag>
     </scm>
 
     <distributionManagement>
