--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>test</groupId>
     <artifactId>test</artifactId>
-    <version>1.5</version>
+    <version>1.6-SNAPSHOT</version>
 
     <description>test project</description>
     <url>http://slawekjaranowski.github.io/test</url>
@@ -34,7 +34,7 @@
         <connection>scm:git:git@github.com:slawekjaranowski/test.git</connection>
         <developerConnection>${project.scm.connection}</developerConnection>
         <url>https://github.com/slawekjaranowski/test</url>
-        <tag>test-1.5</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
