--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,4 +15,6 @@ jobs:
       with:
         java-version: 1.8
     - name: Build
-      run: mvn clean install
+      run: mvn -B -V clean install
+    - name: env
+      run: env
