--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,21 +3,18 @@ name: Java CI
 on: [push, pull_request]
 
 jobs:
-  build-jdk-1_8:
- 
+  build:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: checkout 
-      uses: actions/checkout@v1
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Build maven
-      run: mvn -B -V clean install
-    - name: env
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        TEST1: ${{ secrets.TEST1 }}
-      run: env
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '11'
+
+      - name: Publish to GitHub Packages Apache Maven
+        run: mvn -V -B deploy
+        env:
+          GITHUB_TOKEN: ${{ github.token }} # GITHUB_TOKEN is the default env for the password
