--- a/pom.xml
+++ b/pom.xml
@@ -15,46 +15,45 @@
   -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.github.s4u</groupId>
-        <artifactId>parent</artifactId>
-        <version>2.1.0</version>
-    </parent>
 
-    <groupId>test</groupId>
-    <artifactId>test</artifactId>
-    <version>1.6-SNAPSHOT</version>
+  <groupId>test</groupId>
+  <artifactId>test</artifactId>
+  <version>1.6-SNAPSHOT</version>
 
-    <description>test project</description>
-    <url>http://slawekjaranowski.github.io/test</url>
+  <description>test project</description>
+  <url>http://slawekjaranowski.github.io/test</url>
 
-    <scm>
-        <connection>scm:git:git@github.com:slawekjaranowski/test.git</connection>
-        <developerConnection>${project.scm.connection}</developerConnection>
-        <url>https://github.com/slawekjaranowski/test</url>
-        <tag>HEAD</tag>
-    </scm>
+  <scm>
+    <connection>scm:git:git@github.com:slawekjaranowski/test.git</connection>
+    <developerConnection>${project.scm.connection}</developerConnection>
+    <url>https://github.com/slawekjaranowski/test</url>
+    <tag>HEAD</tag>
+  </scm>
 
-    <distributionManagement>
-        <site>
-            <id>github</id>
-            <url>${project.scm.connection}</url>
-        </site>
-    </distributionManagement>
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub OWNER Apache Maven Packages</name>
+      <url>https://maven.pkg.github.com/slawekjaranowski/test</url>
+    </repository>
+    <snapshotRepository>
+      <id>github</id>
+      <name>GitHub OWNER Apache Maven Packages</name>
+      <url>https://maven.pkg.github.com/slawekjaranowski/test</url>
+    </snapshotRepository>
+  </distributionManagement>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <configuration combine.self="override">
-                    <preparationGoals>clean</preparationGoals>
-                    <goals>deploy</goals>
-                    <releaseProfiles>release</releaseProfiles>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <version>3.1.0</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
